# react-native-tornador-mmkv

./: .gitignore  index.ts  package.json  react-native-tornador-mmkv.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/tornador/mmkv/: TornadorMMKVModule.java  TornadorMMKVPackage.java
cpp/: tornador-mmkv.cpp  tornador-mmkv.h
example/: App.tsx  index.js  package.json  tsconfig.json  types.d.ts
example/ios/example/: Info.plist
example/ios/example.xcodeproj/: project.pbxproj
example/lib/: index.ts  mmkv.ts
ios/: TornadorMMKV.h  TornadorMMKV.mm
ios/TornadorMmkv.xcodeproj/: project.pbxproj
ios/TornadorMmkv.xcworkspace/: contents.xcworkspacedata
lib/: nativeTornadorMMKV.d.ts
